On branch master  Your branch is up to date with 'origin/master'.
 Changes to be committed:
	modified:   Gemfile
	modified:   Gemfile.lock
	modified:   _config.yml
	new file:   _data/schedule.yml
	modified:   _data/team.yml
	modified:   _includes/footer.html
	modified:   _includes/head.html
	new file:   _layouts/schedule.html
	modified:   assets/css/main.css
	new file:   assets/css/timeline.css
	new file:   assets/img/members/gusson.jpg
	renamed:    assets/img/members/julio.jpg -> assets/img/members/madureira.jpg
	renamed:    assets/img/members/bruno.jpg -> assets/img/members/xavier.jpg
	deleted:    assets/vendor/css/carousel.css
	modified:   index.html
	new file:   inscricao.md
	new file:   mesa-redonda-arduinod19.md
	new file:   programacao.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
  <!-- FOOTER -->
-<footer class="container-fluid rodape">
+<footer class="container-fluid py-5 rodape">
 	<div class="text-center">
 		<img src="{{ site.baseurl }}/assets/img/logoifes.png" alt="" class="img-thumbnail" width="140" height="140">
 		<div style="margin: 1em;">
-    	<div>Rodovia ES-482 (Cachoeiro-Alegre) - Fazenda Morro Grande, CEP 29311-970 - Cachoeiro de Itapemirim, ES - Brasil</div>
-    	<div>(28) 3526-9033 | (28) 3526-9045</div>
-    	<div>arduinoday.ci@gmail.com</div>       	
+    	<div>{{ site.contact.address }}</div>
+    	<div>{{ site.contact.phone }}</div>
+    	<div>{{ site.contact.email }}</div>       	
       </div> 
 		<div>		
-  		<p>Desenvolvido por <b>Labora</b>.</p>
+  		<p>Desenvolvido por <b>{{ site.author }}</b>.</p>
 		</div>
 		<small>Arduino Day 2017-{{ site.time | date: '%Y' }}</small>
 	</div>
