--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
   {% seo %}
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="{{ '/assets/vendor/css/bootstrap.min.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ '/assets/css/timeline.css' | prepend: site.baseurl }}">
    <!-- Favicon --> 
