--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="container-fluid py-5 rodape">
 	<div class="text-center">
 		<img src="{{ site.baseurl }}/assets/img/logoifes.png" alt="" class="img-thumbnail" width="140" height="140">
-		<div style="margin: 1em;">
+		<div class="py-2">
     	<div>{{ site.contact.address }}</div>
     	<div>{{ site.contact.phone }}</div>
     	<div>{{ site.contact.email }}</div>       	
