add links midias sociais

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,9 @@
   		<p>Desenvolvido por <b>{{ site.author }}</b>.</p>
 		</div>
 		<small>Arduino Day 2017-{{ site.time | date: '%Y' }}</small>
+		<div class="py-2">
+			<a href="https://www.instagram.com/dayarduino/" target="_blank"><svg class="icon social-icon"><use xlink:href="#icon-instagram"></use></svg></a>
+			<a href="https://www.facebook.com/events/519497408549855/" target="_blank"><svg class="icon social-icon"><use xlink:href="#icon-facebook"></use></svg></a>
+		</div>
 	</div>
 </footer>
