--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
  <!-- FOOTER -->
 <footer class="container-fluid py-5 rodape">
 	<div class="text-center">
-		<img src="{{ site.baseurl }}/assets/img/logoifes.png" alt="" class="img-thumbnail" width="140" height="140">
+		<img src="{{ site.baseurl }}/assets/img/logoifes.png" alt="Logo do IFES campus Cachoeiro de Itapemirim" class="img-thumbnail" width="140" height="140">
 		<div class="py-2">
     	<div>{{ site.contact.address }}</div>
     	<div>{{ site.contact.phone }}</div>
