--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
   {% seo %}
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> 
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ '/assets/css/timeline.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | prepend: site.baseurl }}">
    <!-- Favicon --> 
   <link href="{{ '/assets/img/icon.png' | prepend: site.baseurl }}" rel="shortcut icon">
 </head>
