--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     	<div>{{ site.contact.email }}</div>       	
       </div> 
 		<div>		
-  		<p>Desenvolvido por <b>{{ site.author }}</b>.</p>
+  		<p>Desenvolvido por <b class="text-y">{{ site.author }}</b>.</p>
 		</div>
 		<small>Arduino Day 2017-{{ site.time | date: '%Y' }}</small>
 		<div class="py-2">
