--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,9 @@
             <a class="nav-link" href="{{ site.url }}/programacao/">Programação</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ site.url }}/submissoes/">Submissões</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/inscricao/">Inscrição</a>
           </li>
         </ul>
