--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,9 @@
             <a class="nav-link" href="{{ site.url }}#local">Local</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ site.url }}/posts/">Posts</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/programacao/">Programação</a>
           </li>
           <li class="nav-item">
