--- a/_includes/google-map.html
+++ b/_includes/google-map.html
@@ -1,32 +1,3 @@
-<div id="location" class="map"></div>
-<script>
-  window.mapData = {"latitude": {{ include.latitude }},"longitude": {{ include.longitude }}, "zoom": {{ include.zoom}}};
-  function initMap() {
-    var myOptions = {
-      zoom: window.mapData.zoom,
-      center: new google.maps.LatLng(window.mapData.latitude, window.mapData.longitude),
-      scrollwheel: false,
-      panControl: false,
-      mapTypeControl: true,
-      mapTypeId: google.maps.MapTypeId.ROADMAP,
-      styles: [{ stylers: [{saturation: -50}]},
-               {featureType: 'water', stylers: [{color: '#40b4ba'}]}
-          ],
-      zoomControlOptions: {position: google.maps.ControlPosition.LEFT_CENTER}
-    };
-
-    var map = new google.maps.Map(document.getElementById('location'), myOptions);
-
-    var marker = new google.maps.Marker({
-      map: map,
-      position: new google.maps.LatLng(window.mapData.latitude, window.mapData.longitude),
-      icon: '/assets/img/pin.png',
-      title: 'Arduino Day - Cachoeiro'
-    });
-
-    google.maps.event.addDomListener(window, 'resize', function() {
-      map.setCenter(myOptions.center);
-    });
-  }
-</script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script>
+<iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3729.7037761083157!2d-41.1573077844087!3d-20.80326867142977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb9679f48da7bf9%3A0xb6b381296237b225!2sIfes%20-%20Campus%20Cachoeiro%20de%20Itapemirim!5e0!3m2!1spt-BR!2sbr!4v1581641115017!5m2!1spt-BR!2sbr"
+  width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
