padding logo apoio

--- a/_includes/apoio.html
+++ b/_includes/apoio.html
@@ -6,14 +6,14 @@
     <div class="text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 p-2">
+                <div class="col-md-6 py-5">
                     <a href="https://www.ci.ifes.edu.br/" target="_blank">
                         <img class="rounded mx-auto d-block" height="80"
                             title="Instituto Federal do Espírito Santo Campus Cachoeiro de Itapemirim"
                             src="{{ site.baseurl }}/assets/img/logoifes.png" alt="Logo do Ifes">
                     </a>
                 </div>
-                <div class="col-md-6 p-2">
+                <div class="col-md-6 py-5">
                     <a href="https://fdci.br/" target="_blank">
                         <img class="rounded mx-auto d-block" height="80"
                             title="Faculdade de Direito de Cachoeiro de Itapemirim (FDCI)"
