--- a/_includes/contagem-regressiva.html
+++ b/_includes/contagem-regressiva.html
@@ -25,7 +25,7 @@
 
         if (distance < 0) {
             clearInterval(x);
-            document.getElementById("regressiva").innerHTML = "EXPIRED";
+            document.getElementById("regressiva").innerHTML = "0 dias 0 horas 0m 0s";
         }
     }, 1000);
 </script>
