--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="{{ site.url }}/programacao/">Programação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.url }}/submissoes/">Submissões</a>
+            <a class="nav-link" href="{{ site.url }}/atividades/">Atividades</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/inscricao/">Inscrição</a>
