--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -11,225 +11,209 @@ $color-border-nth-child-3: #00c8d0;
 $color-border-nth-child-4: #25cbaa;
 
 .main-timeline {
+  overflow: hidden;
+  position: relative;
 
-	overflow: hidden;
-	position: relative;
-	
-	&:after, &:before {
-		content: "";
-		display: block;
-		width: 100%;
-		clear: both
-	}
-	
-	&:before {
-		content: "";
-		width: 3px;
-		height: 100%;
-		background: $background-default;
-		position: absolute;
-		top: 30px; 
-		left:50%;
-	}
+  &:after,
+  &:before {
+    content: "";
+    display: block;
+    width: 100%;
+    clear: both;
+  }
 
-	.timeline-icon {
-		width: 32px;
-		height:32px;
-		border-radius: 50%;
-		background: #fff;
-		border: 3px solid $color-nth-child-1;
-		position: absolute;
-		top: 5.5%;
-		right: -17.5px;
-	}
+  &:before {
+    content: "";
+    width: 3px;
+    height: 100%;
+    background: $background-default;
+    position: absolute;
+    top: 30px;
+    left: 50%;
+  }
 
-	.year {
-		display: block;
-		padding: 10px;
-		margin: 0;
-		font-size: 30px;
-		color: #fff;
-		border-radius: 0 50px 50px 0;
-		background: $color-nth-child-1;
-		text-align: center;
-		position: relative;
+  .timeline-icon {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: #fff;
+    border: 3px solid $color-nth-child-1;
+    position: absolute;
+    top: 5.5%;
+    right: -17.5px;
+  }
 
-		&:before {
-			content: "";
-			border-top: 35px solid $color-border-nth-child-1;
-			border-left: 35px solid transparent;
-			position: absolute;
-			bottom: -35px;
-			left: 0;
-		}
-	}
+  .year {
+    display: block;
+    padding: 10px;
+    margin: 0;
+    font-size: 30px;
+    color: #fff;
+    border-radius: 0 50px 50px 0;
+    background: $color-nth-child-1;
+    text-align: center;
+    position: relative;
 
-	.timeline-content {
-		padding: 30px 20px;
-		margin: 0 45px 0 35px;
-		background: #f2f2f2;
-	}
+    &:before {
+      content: "";
+      border-top: 35px solid $color-border-nth-child-1;
+      border-left: 35px solid transparent;
+      position: absolute;
+      bottom: -35px;
+      left: 0;
+    }
+  }
 
-	.title {
-		font-size:19px;
-		font-weight:700;
-		color:#504f54;
-		margin:0 0 10px;
-	}
-	
-	.description {
-		font-size:14px;
-		color:#7d7b7b;
-		margin:0;
-	}
-	
+  .timeline-content {
+    padding: 30px 20px;
+    margin: 0 45px 0 35px;
+    background: #f2f2f2;
+    background-image: url("../img/banner-grid.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+  }
 
-	.timeline {
+  .title {
+    font-size: 19px;
+    font-weight: 700;
+    color: #504f54;
+    margin: 0 0 10px;
+  }
 
-		width: 50%;
-		float: left;
-		padding-right: 30px;
-		position: relative;
+  .description {
+    font-size: 14px;
+    color: #7d7b7b;
+    margin: 0;
+  }
 
-		&:nth-child(2n) {
+  .timeline {
+    width: 50%;
+    float: left;
+    padding-right: 30px;
+    position: relative;
 
-			padding: 0 0 0 30px;
+    &:nth-child(2n) {
+      padding: 0 0 0 30px;
 
-			.timeline-icon {
-				right:auto;
-				left:-14.5px;
-			}
+      .timeline-icon {
+        right: auto;
+        left: -14.5px;
+      }
 
-			.year {
+      .year {
+        border-radius: 50px 0 0 50px;
+        background: $color-nth-child-2;
 
-				border-radius:50px 0 0 50px;
-				background: $color-nth-child-2;
+        &:before {
+          border-left: none;
+          border-right: 35px solid transparent;
+          left: auto;
+          right: 0;
+          border-top-color: $color-border-nth-child-2;
+        }
+      }
 
-				&:before {
-					border-left: none;
-					border-right: 35px solid transparent;
-					left: auto;
-					right: 0;
-					border-top-color: $color-border-nth-child-2;
-				}
+      .timeline-content {
+        text-align: right;
+        margin: 0 35px 0 45px;
+      }
 
-			}
+      .timeline-icon {
+        border-color: $color-nth-child-2;
+      }
+    }
 
-			.timeline-content {
-				text-align:right;
-				margin:0 35px 0 45px;
-			}
+    &:nth-child(2) {
+      margin-top: 170px;
+    }
 
-			.timeline-icon {
-				border-color: $color-nth-child-2;
-			}
-		
-		}
-		
-		&:nth-child(2) {
-			margin-top:170px;
-		}
-		
-		&:nth-child(odd) {
-			margin:-175px 0 0;
-		}
-		
-		&:nth-child(even) {
-			margin-bottom:80px;
-		}
-		
-		&:first-child, &:last-child:nth-child(even) {
-			margin:0;
-		}
+    &:nth-child(odd) {
+      margin: -175px 0 0;
+    }
 
-		&:nth-child(3n) {
+    &:nth-child(even) {
+      margin-bottom: 80px;
+    }
 
-			.timeline-icon {
-				border-color: $color-nth-child-3;
-			}
+    &:first-child,
+    &:last-child:nth-child(even) {
+      margin: 0;
+    }
 
-			.year {
+    &:nth-child(3n) {
+      .timeline-icon {
+        border-color: $color-nth-child-3;
+      }
 
-				background:$color-nth-child-3;
+      .year {
+        background: $color-nth-child-3;
 
-				&:before {
-					border-top-color: $color-border-nth-child-3;
-				}
-			}
+        &:before {
+          border-top-color: $color-border-nth-child-3;
+        }
+      }
+    }
 
-		}
+    &:nth-child(4n) {
+      .timeline-icon {
+        border-color: $color-nth-child-4;
+      }
 
-		&:nth-child(4n) {
-			
-			.timeline-icon {
-				border-color: $color-nth-child-4;
-			}
+      .year {
+        background: $color-nth-child-4;
 
-			.year {
+        &:before {
+          border-top-color: $color-border-nth-child-4;
+        }
+      }
+    }
+  }
 
-				background:$color-nth-child-4;
+  @media only screen and (max-width: 767px) {
+    overflow: visible;
 
-				&:before {
-					border-top-color: $color-border-nth-child-4;
-				}
-			}
+    &:before {
+      top: 0;
+      left: 0;
+    }
 
-		}
+    .timeline:nth-child(2),
+    .timeline:nth-child(even),
+    .timeline:nth-child(odd) {
+      margin: 0;
+    }
 
-	}
+    .timeline {
+      width: 100%;
+      float: none;
+      padding: 0 0 0 30px;
+      margin-bottom: 20px !important;
+      position: relative;
 
+      &:last-child {
+        margin: 0 !important;
+      }
+    }
 
-	@media only screen and (max-width:767px) {
-		
-		overflow: visible;
+    .timeline-icon {
+      right: auto;
+      left: -14.5px;
+    }
 
-		&:before {
-			top: 0;
-			left: 0;
-		}
+    .year {
+      border-radius: 50px 0 0 50px;
 
-		.timeline:nth-child(2), 
-		.timeline:nth-child(even), 
-		.timeline:nth-child(odd) {
-			margin: 0;
-		}
-		
-		.timeline {
+      &:before {
+        border-left: none;
+        border-right: 35px solid transparent;
+        left: auto;
+        right: 0;
+      }
+    }
 
-			width: 100%;
-			float: none;
-			padding: 0 0 0 30px;
-			margin-bottom: 20px!important;
-			position: relative;
-
-			&:last-child {
-				margin: 0!important;
-			}
-		}
-				
-		.timeline-icon {
-			right: auto;
-			left: -14.5px;
-		}
-		
-		.year {
-		
-			border-radius: 50px 0 0 50px;
-			
-			&:before{
-				border-left: none;
-				border-right: 35px solid transparent;
-				left: auto;
-				right: 0;
-			}
-
-		}
-		
-		.timeline-content {
-			margin: 0 35px 0 45px;
-		}
-
-	}
-
+    .timeline-content {
+      margin: 0 35px 0 45px;
+    }
+  }
 }
-
