timeline em telas pequenas possuem o texto na esquerda.

--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -213,6 +213,7 @@ $color-border-nth-child-4: #25cbaa;
     }
 
     .timeline-content {
+      text-align: left !important;
       margin: 0 35px 0 45px;
     }
   }
