--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/inscricao/">Inscrição</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.url }}/submissao/">Submissão de trabalhos</a>
+          </li>
         </ul>
       </div>
     </div>
