--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="{{ site.url }}/atividades/">Atividades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.url }}/inscricao/">Inscrição</a>
+            <a class="nav-link" href="{{ site.url }}/inscricao/">Credenciamento</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/submissao/">Submissão de trabalhos</a>
