(3/3) alterado logo do menu para 2020

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
     <div class="container">
       <a class="navbar-brand" href="{{ site.url }}">
-        <img src="{{ site.baseurl }}/assets/img/logo.svg" alt="Logo Arduino Day 2019" height="50">
+        <img src="{{ site.baseurl }}/assets/img/logo2020.svg" alt="Logo Arduino Day" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
