adicao de conteudo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
       <a class="navbar-brand" href="{{ site.url }}">
         <img src="{{ site.baseurl }}/assets/img/logo2020.svg" alt="Logo Arduino Day" height="50">
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -13,19 +14,10 @@
             <a class="nav-link" href="{{ site.url }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.url }}#faq">FAQ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.url }}#local">Local</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/posts/">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/programacao/">Programação</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.url }}/atividades/">Atividades</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.url }}/inscricao/">Credenciamento</a>
